my-helm-chart/crud-proj/templates/ingresses/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ms1
            pathType: Prefix
            backend:
              service:
                name: kube-ms1
                port:
                  number: 8081
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notifications-service
                port:
                  number: 8083                
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kube-land
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  react-app
                port:
                  number: 3000
          - path: /zipkin
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 9411
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
